--- a/public/locales/en/about.json
+++ b/public/locales/en/about.json
@@ -20,11 +20,11 @@
       "title": "Of all the jobs in the world, why did I choose this one?",
       "desc": "<span> This job chose me because it gives me the opportunity to be creative, to always stay up to date with trends, provides the ability to do work wherever I am, and most importantly, it gives me the freedom to work as I feel is best because I have the complete trust of our clients. </span> </br> <span> Every new project gives me fresh energy, and every new success of our project renews my zeal to create and come up with even more exciting things! </span>  </br> <span> That’s what kept me in love with my job for years! </span>"
     },
-    "tijanaM": {
-      "name": "Tijana Milojević ",
+    "boban": {
+      "name": "Boban Aksić",
       "role": "Graphic designer",
-      "title": "The hard thing about my job that I actually love?",
-      "desc": "<span> Website design. The challenge with website design is that you have to combine design and functionality. When I create a website, I try to communicate the point and vibe of the brand, to make it all attractive and \"tasty\", and at the same time, to get every button and information in the right place. Sometimes you get \"stuck\" so you have to blow off some steam before continuing, but it's a challenge that I absolutely love! </span> "
+      "title": "If I had to explain what I do to someone in 1 sentence, how would I say it?",
+      "desc": "<span> I make the world a visually more beautiful place, with the help of a little knowledge and a lot of imagination. </span>"
     },
     "aleksej": {
       "name": "Aleksej Nešović",
@@ -57,11 +57,11 @@
       "title": "What needs to be more present in the creative/digital industry?",
       "desc": "<span> We need more freedom and fewer rules. I get the impression that everything looks the same and that there is no room for any major changes. This is also a great advantage of this job because both clients and the target group immediately recognize when you “break” these rules, and bring something bold and different! </span>"
     },
-    "boban": {
-      "name": "Boban Aksić",
+    "ivanKostakijev": {
+      "name": "Ivan Kostakijev",
       "role": "Graphic designer",
-      "title": "If I had to explain what I do to someone in 1 sentence, how would I say it?",
-      "desc": "<span> I make the world a visually more beautiful place, with the help of a little knowledge and a lot of imagination. </span>"
+      "title": "The hard thing about my job that I actually love?",
+      "desc": "<span> Website design. The challenge with website design is that you have to combine design and functionality. When I create a website, I try to communicate the point and vibe of the brand, to make it all attractive and \"tasty\", and at the same time, to get every button and information in the right place. Sometimes you get \"stuck\" so you have to blow off some steam before continuing, but it's a challenge that I absolutely love! </span> "
     }
   },
   "metaTitle": "",
