--- a/public/locales/en/about.json
+++ b/public/locales/en/about.json
@@ -60,8 +60,8 @@
     "ivanKostakijev": {
       "name": "Ivan Kostakijev",
       "role": "Graphic designer",
-      "title": "The hard thing about my job that I actually love?",
-      "desc": "<span> Website design. The challenge with website design is that you have to combine design and functionality. When I create a website, I try to communicate the point and vibe of the brand, to make it all attractive and \"tasty\", and at the same time, to get every button and information in the right place. Sometimes you get \"stuck\" so you have to blow off some steam before continuing, but it's a challenge that I absolutely love! </span> "
+      "title": "If you weren't a graphic designer, what would you (probably) do?",
+      "desc": "If I weren't a graphic designer, I'm pretty sure I would be in some kind of sports, like basketball or fighting sports like jiu-jitsu or boxing."
     }
   },
   "metaTitle": "",
